--- a/src/walkaround/composer.css
+++ b/src/walkaround/composer.css
@@ -1,6 +1,6 @@
 /* FONTS */
 body * {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 em {
     color: #194a5e;
@@ -13,7 +13,7 @@ b {
 body {
     display: flex;
     flex-direction: row;
-    
+
     height: calc(100vh - 16px);
     width: calc(100vw - 16px);
     overflow: hidden;
@@ -30,7 +30,7 @@ body {
     margin: 0.5vh;
     padding: 1vh;
     border-radius: 4px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 .ungrouped {
     height: fit-content;
@@ -46,23 +46,29 @@ body {
     z-index: 1;
 }
 .hover::after {
-    position:absolute;
+    position: absolute;
     content: "";
     height: 100%;
     width: 100%;
     left: 0;
     top: 0;
-    box-shadow: 0 0 10px rgba(1,1,1,0.3);
+    box-shadow: 0 0 10px rgba(1, 1, 1, 0.3);
 }
-.hover.left   {left:   5px;}
-.hover.right  {right:  5px;}
-.hover.top    {top:    5px;}
-.hover.bottom {bottom: 5px;}
+.hover.left {
+    left: 5px;
+}
+.hover.right {
+    right: 5px;
+}
+.hover.top {
+    top: 5px;
+}
+.hover.bottom {
+    bottom: 5px;
+}
 .hidden {
     display: none;
 }
-
-
 
 /* ELEMENTS */
 button {
@@ -71,20 +77,19 @@ button {
     font-size: 1em;
     font-weight: 500;
     color: #eee;
-    background: #32728C;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    background: #32728c;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     cursor: pointer;
     border: initial;
 }
-button.disabled, button.disabled:hover {
-    color:            #666666;
+button.disabled,
+button.disabled:hover {
+    color: #666666;
     background-color: inherit;
     pointer-events: none;
     opacity: 0.5;
     box-shadow: 0px 0px 2px 1px grey;
 }
-
-
 
 /* CONTAINERS */
 #stage-container {
@@ -97,7 +102,7 @@ button.disabled, button.disabled:hover {
     /* Screen is wide, make stage grow */
     #stage-container {
         flex-grow: 6;
-        max-height: calc(100% - 16px)
+        max-height: calc(100% - 16px);
     }
 }
 #thumbs {
@@ -107,7 +112,7 @@ button.disabled, button.disabled:hover {
     gap: 10px;
     overflow: hidden auto;
     scrollbar-width: thin;
-    
+
     /* this element layout */
     /* min-height is the height of one .img-container */
     min-height: 20%;
@@ -136,16 +141,14 @@ button.disabled, button.disabled:hover {
     width: 100%;
     aspect-ratio: 1/1;
     object-fit: cover;
-    
+
     /* allow corner snipping */
     overflow: hidden;
     /* style container */
     border-radius: 4px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     display: flex;
 }
-
-
 
 /* STAGE AND THUMBNAILS */
 walkaround-viewer {
@@ -173,14 +176,14 @@ walkaround-viewer {
     display: none;
 }
 
-
-
 /* THUMBNAIL HOVERING DELETE BUTTON */
-#thumbs:not(:hover) .hover-bar {visibility: hidden;}
+#thumbs:not(:hover) .hover-bar {
+    visibility: hidden;
+}
 .delete-icon {
     /* style */
     background-color: black;
-    transition: background-color .1s;
+    transition: background-color 0.1s;
     /* icon */
     mask-image: url("/icons/x-circle-fill.svg");
     mask-size: 100%;
@@ -193,23 +196,20 @@ walkaround-viewer {
     right: -2%;
     top: -5%;
     content: "";
-    
 }
 .delete-icon:hover {
     background-color: #db392b;
 }
 .delete-icon::after {
-    filter: drop-shadow(1px 1px 4px rgba(0,0,0,0.75))
+    filter: drop-shadow(1px 1px 4px rgba(0, 0, 0, 0.75));
 }
-
-
 
 /* BUTTONS */
 button.hover {
     height: 60px;
     aspect-ratio: 1/1;
     border-radius: 100%;
-    
+
     background-size: 69%;
     background-position: center;
     background-repeat: no-repeat;
@@ -227,25 +227,22 @@ button.hover::after {
     background-image: url("/icons/info-lg.svg");
 }
 
-
-
 /* HELP POPUP */
 #help-popup {
     background-color: white;
-    
+
     /* Look like a card, but add a fluffy cloud to help stand out */
     border-radius: 4px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12),
-                0 1px 2px rgba(0,0,0,0.24),
-                0 0 30px 10px rgba(47, 47, 47, 0.3);
-    
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24),
+        0 0 30px 10px rgba(47, 47, 47, 0.3);
+
     /* Position in the middle of the window */
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 5;
-    
+
     /* Allow appearance animation */
     opacity: 1;
     visibility: visible;
@@ -263,5 +260,3 @@ button.hover::after {
 #help-popup h3 {
     text-align: center;
 }
-
-
